--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,10 @@
 						<table class="table is-bordered is-hoverable is-striped is-narrow">
 							<thead>
 							<tr>
-								<th> # </th>
 								<th> Firstname </th>
 								<th> Lastname </th>
 								<th> Email </th>
+								<th> &nbsp; </th>
 								<th> &nbsp; </th>
 							</tr>
 							</thead>
@@ -35,16 +35,61 @@
 										<i class="fas fa-user-times"></i>
 									</span></a>
 								</td>
+								<td><a href="/showPets?id=<%= allUsers[i].web_user_id %>">
+									<span class="icon is-small">
+									<i class="fas fa-paw"></i>
+									</span></a>
+									</td>
 							</tr>
 							<% } %>
 							<tfoot>
-								<tr> <td colspan="4">
+								<tr> <td colspan="5">
 								There are <%= i %> users.
 								</td> </tr>
 							</tfoot>
 						</table>
 						</div>
 					<% } %>
+					<form action="addUser" method="post">
+						<div class="field is-horizontal">
+						 <div class="field-label is-normal">
+						<label class="label">Add New User</label>
+						 </div>
+						 <div class="field-body">
+						<div class="field">
+						 <p class="control is-expanded">
+						<input name="first_name" class="input" type="text"
+						 placeholder="first name">
+						 </p>
+						</div>
+						<div class="field">
+						 <p class="control is-expanded">
+						<input name="last_name" class="input" type="text"
+						 placeholder="last name">
+						 </p>
+						</div>
+						<div class="field">
+						 <p class="control is-expanded">
+						<input name="email" class="input" type="email"
+						 placeholder="email">
+						 </p>
+						</div>
+						<div class="field">
+						 <p class="control is-expanded">
+							<input name="password" class="input" type="password" placeholder="password">
+						 </p>
+						</div>
+						<div class="field">
+						<button class="button is-link">
+						<span>Add</span>
+						<span class="icon is-small">
+						<i class="fas fa-user-plus"></i>
+						</span>
+						</button>
+						</div>
+						 </div>
+						</div>
+						</form>
 				</div>
 			</div>
 		</section>
